# app/controllers/api/v1/menu_items_controller.rb
@@ -1,21 +1,19 @@
 # frozen_string_literal: true
 
 class Api::V1::MenuItemsController < Api::V1::ApplicationController
+  before_action :set_restaurant
   before_action :set_menu
-  before_action :set_menu_item, only: [ :show ]
 
   def index
     @menu_items = @menu.menu_items.page(params[:page] || 1).per(params[:per_page] || 10)
   end
 
-  def show; end
-
   private
-    def set_menu
-      @menu = Menu.find(params[:menu_id])
+    def set_restaurant
+      @restaurant = Restaurant.find(params[:restaurant_id])
     end
 
-    def set_menu_item
-      @menu_item = @menu.menu_items.find(params[:id])
+    def set_menu
+      @menu = @restaurant.menus.find(params[:menu_id])
     end
 end
