# app/controllers/api/v1/menus_controller.rb
@@ -1,19 +1,25 @@
 # frozen_string_literal: true
 
 class Api::V1::MenusController < Api::V1::ApplicationController
+  before_action :set_restaurant
   before_action :set_menu, only: [ :show ]
 
   def index
-    @menus = Menu.select(:id, :name, :created_at, :updated_at)
-                 .order(:created_at)
-                 .page(params[:page] || 1)
-                 .per(params[:per_page] || 10)
+    @menus = @restaurant.menus
+                        .select(:id, :name, :created_at, :updated_at)
+                        .order(:created_at)
+                        .page(params[:page] || 1)
+                        .per(params[:per_page] || 10)
   end
 
   def show; end
 
   private
     def set_menu
-      @menu = Menu.find(params[:id])
+      @menu = @restaurant.menus.find(params[:id])
+    end
+
+    def set_restaurant
+      @restaurant = Restaurant.find(params[:restaurant_id])
     end
 end
